--- a/mod_sliderjs/plugins/camera/themes/camera.css
+++ b/mod_sliderjs/plugins/camera/themes/camera.css
@@ -30,6 +30,7 @@
 	list-style: none
 }
 .camera_wrap {
+	direction: ltr;
 	display: none;
 	float: left;
 	position: relative;
@@ -107,14 +108,14 @@
 	z-index: 2;
 }
 .camera_target_content .camera_link {
-    background: url(blank.gif);
+    background: url(../images/blank.gif);
 	display: block;
 	height: 100%;
 	text-decoration: none;
 }
 .camera_loader {
-    background: #fff url(camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(camera-loader.gif) no-repeat center;
+    background: #fff url(../images/camera-loader.gif) no-repeat center;
+	background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
 	border: 1px solid #ffffff;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
@@ -183,7 +184,7 @@
 	z-index: 10;
 }
 .camera_prevThumbs div {
-	background: url(camera_skins.png) no-repeat -160px 0;
+	background: url(../images/camera_skins.png) no-repeat -160px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -202,7 +203,7 @@
 	z-index: 10;
 }
 .camera_nextThumbs div {
-	background: url(camera_skins.png) no-repeat -190px 0;
+	background: url(../images/camera_skins.png) no-repeat -190px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -235,7 +236,7 @@
 	margin: 20px 5px;
 	position: relative;
 	text-align: left;
-	text-indent: -9999px;
+	text-indent: 9999px;
 	width: 16px;
 }
 .camera_commands_emboss .camera_pag .camera_pag_ul li {
@@ -302,7 +303,7 @@
 	left: 0;
 }
 .camera_prev > span {
-	background: url(camera_skins.png) no-repeat 0 0;
+	background: url(../images/camera_skins.png) no-repeat 0 0;
 	display: block;
 	height: 40px;
 	width: 40px;
@@ -311,7 +312,7 @@
 	right: 0;
 }
 .camera_next > span {
-	background: url(camera_skins.png) no-repeat -40px 0;
+	background: url(../images/camera_skins.png) no-repeat -40px 0;
 	display: block;
 	height: 40px;
 	width: 40px;
@@ -320,12 +321,12 @@
 	right: 41px;
 }
 .camera_commands > .camera_play {
-	background: url(camera_skins.png) no-repeat -80px 0;
+	background: url(../images/camera_skins.png) no-repeat -80px 0;
 	height: 40px;
 	width: 40px;
 }
 .camera_commands > .camera_stop {
-	background: url(camera_skins.png) no-repeat -120px 0;
+	background: url(../images/camera_skins.png) no-repeat -120px 0;
 	display: block;
 	height: 40px;
 	width: 40px;
@@ -339,7 +340,7 @@
 	height: 16px;
 	margin: 20px 5px;
 	position: relative;
-	text-indent: -9999px;
+	text-indent: 9999px;
 	width: 16px;
 }
 .camera_thumbs_cont {
@@ -404,34 +405,34 @@
 *
 **************************/
 .pattern_1 .camera_overlayer {
-	background: url(overlay1.png) repeat;
+	background: url(../images/patterns/overlay1.png) repeat;
 }
 .pattern_2 .camera_overlayer {
-	background: url(overlay2.png) repeat;
+	background: url(../images/patterns/overlay2.png) repeat;
 }
 .pattern_3 .camera_overlayer {
-	background: url(overlay3.png) repeat;
+	background: url(../images/patterns/overlay3.png) repeat;
 }
 .pattern_4 .camera_overlayer {
-	background: url(overlay4.png) repeat;
+	background: url(../images/patterns/overlay4.png) repeat;
 }
 .pattern_5 .camera_overlayer {
-	background: url(overlay5.png) repeat;
+	background: url(../images/patterns/overlay5.png) repeat;
 }
 .pattern_6 .camera_overlayer {
-	background: url(overlay6.png) repeat;
+	background: url(../images/patterns/overlay6.png) repeat;
 }
 .pattern_7 .camera_overlayer {
-	background: url(overlay7.png) repeat;
+	background: url(../images/patterns/overlay7.png) repeat;
 }
 .pattern_8 .camera_overlayer {
-	background: url(overlay8.png) repeat;
+	background: url(../images/patterns/overlay8.png) repeat;
 }
 .pattern_9 .camera_overlayer {
-	background: url(overlay9.png) repeat;
+	background: url(../images/patterns/overlay9.png) repeat;
 }
 .pattern_10 .camera_overlayer {
-	background: url(overlay10.png) repeat;
+	background: url(../images/patterns/overlay10.png) repeat;
 }
 .camera_caption {
 	color: #fff;
