--- a/mod_sliderjs/plugins/nivo/themes/default/default.css
+++ b/mod_sliderjs/plugins/nivo/themes/default/default.css
@@ -85,6 +85,13 @@ Supports Thumbs: true
 	height: auto;
 	background: none;
 	margin-bottom: 5px;
+    opacity:0.6;
+    filter:alpha(opacity=60); /* For IE8 and earlier */
+}
+.theme-default .nivo-controlNav.nivo-thumbs-enabled a.active,
+.theme-default .nivo-controlNav.nivo-thumbs-enabled a:hover {
+    opacity:1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
 }
 .theme-default .nivo-controlNav.nivo-thumbs-enabled img {
 	display: block;
